--- a/index.html
+++ b/index.html
@@ -1,81 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>Bento</title>
-		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
-		<link rel="stylesheet" href="app.css" />
-		<script src="https://unpkg.com/lucide@latest"></script>
-	</head>
+<head>
+  <meta charset="UTF-8" />
+  <title>Bento</title>
+  <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png" />
+  <link rel="stylesheet" href="app.css" />
+  <script src="https://unpkg.com/lucide@latest"></script>
+</head>
 
-	<!-- 
-      ╔╗ ╔═╗╔╗╔╔╦╗╔═╗
-      ╠╩╗║╣ ║║║ ║ ║ ║
-      ╚═╝╚═╝╝╚╝ ╩ ╚═╝
-      -->
+<body class="">
+  <button id="themeButton">
+    <i id="themeIcon" data-lucide="moon"></i>
+  </button>
+  <a href="settings.html">
+    <button id="settingsButton">
+      <i id="settingsIcon" data-lucide="settings"></i>
+    </button>
+  </a>
+  <div class="container">
+    <div class="timeBlock">
+      <div class="clock">
+        <div id="hour"></div>
+        <div id="separator"></div>
+        <div id="minutes"></div>
+      </div>
+      <div id="greetings"></div>
+    </div>
 
-	<body class="">
-		<button id="themeButton">
-			<i id="themeIcon" icon-name="moon"></i>
-		</button>
-		<div class="container">
-			<!-- Clock and Greetings  -->
+    <div class="weatherBlock">
+      <div class="date">
+        <div id="month"></div>
+        <div id="day"></div>
+      </div>
+      <div class="weather">
+        <div class="weatherIcon">
+          <img src="assets/icons/OneDark/unknown.png" alt="Weather Icon">
+        </div>
+        <div class="weatherValue">
+          <p>- °<span class="g">c</span></p>
+        </div>
+        <div class="weatherDescription">
+          <p></p>
+        </div>
+      </div>
+    </div>
 
-			<div class="timeBlock">
-				<div class="clock">
-					<div id="hour"></div>
-					<div id="separator"></div>
-					<div id="minutes"></div>
-				</div>
-				<div id="greetings"></div>
-			</div>
+    <div class="linksBlock" id="linksBlock">
+      <div class="linksBlockLeft" id="linksBlockLeft"></div>
+      <div class="linksBlockRight" id="linksBlockRight"></div>
+    </div>
+  </div>
 
-			<!-- Date and Weather  -->
-
-			<div class="weatherBlock">
-				<div class="date">
-					<div id="month"></div>
-					<div id="day"></div>
-				</div>
-				<div class="weather">
-					<div class="weatherIcon">
-						<img src="assets/icons/OneDark/unknown.png" />
-					</div>
-					<div class="weatherValue">
-						<p>- °<span class="g">c</span></p>
-					</div>
-					<div class="weatherDescription">
-						<p></p>
-					</div>
-				</div>
-			</div>
-
-			<div class="linksBlock" id="linksBlock">
-				<div class="linksBlockLeft" id="linksBlockLeft"></div>
-				<div class="linksBlockRight" id="linksBlockRight"></div>
-			</div>
-		</div>
-
-		<!-- Config  -->
-		<script src="config.js"></script>
-
-		<!-- Scripts  -->
-		<script src="assets/js/layout.js"></script>
-		<script src="assets/js/theme.js"></script>
-		<script src="assets/js/time.js"></script>
-		<script src="assets/js/greeting.js"></script>
-		<script src="assets/js/weather.js"></script>
-
-		<!-- Generators  -->
-		<script src="assets/js/buttons.js"></script>
-		<script src="assets/js/lists.js"></script>
-
-		<!-- Icons -->
-		<script>
-			lucide.createIcons();
-		</script>
-	</body>
-
-	<!-- Developed and designed by Miguel Ávila: -->
-	<!-- https://avila.sh-->
+  <!-- Section Barre de Recherche -->
+  <div class="searchBlock">
+    <div class="group">
+      <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
+        <g>
+          <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
+        </g>
+      </svg>
+      <input id="search-input" placeholder="Search" type="search" class="input">
+    </div>
+  </div>
+  <script src="config.js"></script>
+  <script src="assets/js/layout.js"></script>
+  <script src="assets/js/theme.js"></script>
+  <script src="assets/js/time.js"></script>
+  <script src="assets/js/greeting.js"></script>
+  <script src="assets/js/weather.js"></script>
+  <script src="assets/js/buttons.js"></script>
+  <script src="assets/js/lists.js"></script>
+  <script src="assets/js/main.js"></script> <!-- Référence au script externe -->
+</body>
 </html>
