style des paramètres

--- a/settings.html
+++ b/settings.html
@@ -7,124 +7,282 @@
     <!-- <link rel="stylesheet" href="app.css"> -->
     <script src="assets/js/settings.js"></script>
 </head>
+<style>
+        body {
+        text-align: center; 
+    }
+/* 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+} */
+
+/* From Uiverse.io by Satwinder04 */ 
+.input-container {
+  position: relative;
+  margin: 50px auto;
+  width: 200px;
+}
+
+.input-container input[type="text"] {
+  font-size: 20px;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  padding: 5px 0;
+  background-color: transparent;
+  outline: none;
+  color: #ffffff;
+}
+
+.input-container .label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #ccc;
+  transition: all 0.3s ease;
+  pointer-events: none;
+}
+
+.input-container input[type="text"]:focus ~ .label,
+.input-container input[type="text"]:valid ~ .label {
+  top: -20px;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.input-container .underline {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #ffffff;
+  transform: scaleX(0);
+  transition: all 0.3s ease;
+}
+
+.input-container input[type="text"]:focus ~ .underline,
+.input-container input[type="text"]:valid ~ .underline {
+  transform: scaleX(1);
+}
+
+</style>
 <body>
     <h1>Paramètres</h1>
     <main>
         <section>
             <h2>Général</h2>
-            <label for="name">Entrez votre nom</label>
-            <input type="text" id="name" name="name" value="guy">
+            <div class="input-container">
+                <input type="text" id="name" name="name" value="guy">
+                <label for="name" class="label">Entrez votre nom</label>
+                <div class="underline"></div>
+            </div>
         </section>
         <section>
             <h2>Liens</h2>
             <div id="linksSettings">
                 <div>
-                    <label for="icon1Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône 1</a></label>
-                    <input type="text" id="icon1Name" value="github">
-                    <label for="icon1Link">Lien du bouton 1</label>
-                    <input type="text" id="icon1Link" value="https://github.com/">
+                    <div class="input-container">
+                        <input type="text" id="icon1Name" required="">
+                        <label for="icon1Name" class="label">Nom du bouton 1</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="icon1Link" required="">
+                      <label for="icon1Link" class="label">Lien du bouton 1</label>
+                      <div class="underline"></div>
+                    </div>
+                    
+                    
+
                 </div>
                 <div>
-                    <label for="icon2Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône 2</a></label>
-                    <input type="text" id="icon2Name" value="mail">
-                    <label for="icon2Link">Lien du bouton 2</label>
-                    <input type="text" id="icon2Link" value="https://outlook.com/">
+                    <div class="input-container">
+                        <input type="text" id="icon2Name" required="">
+                        <label for="icon2Name" class="label">Nom du bouton 2</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="icon2Link" required="">
+                      <label for="icon2Link" class="label">Lien du bouton 2</label>
+                      <div class="underline"></div>
+                    </div>
+                    </div>
                 </div>
                 <div>
-                    <label for="icon3Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône 3</a></label>
-                    <input type="text" id="icon3Name" value="calendar-plus">
-                    <label for="icon3Link">Lien du bouton 3</label>
-                    <input type="text" id="icon3Link" value="https://www.notion.so/">
+                    <div class="input-container">
+                        <input type="text" id="icon3Name" required="">
+                        <label for="icon3Name" class="label">Nom du bouton 3</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="icon3Link" required="">
+                      <label for="icon3Link" class="label">Lien du bouton 3</label>
+                      <div class="underline"></div>
+                    </div>
+                    </div>
                 </div>
                 <div>
-                    <label for="icon4Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône 4</a></label>
-                    <input type="text" id="icon4Name" value="graduation-cap">
-                    <label for="icon4Link">Lien du bouton 4</label>
-                    <input type="text" id="icon4Link" value="https://intra.epitech.eu/">
+                    <div class="input-container">
+                        <input type="text" id="icon4Name" required="">
+                        <label for="icon4Name" class="label">Nom du bouton 4</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="icon4Link" required="">
+                      <label for="icon4Link" class="label">Lien du bouton 4</label>
+                      <div class="underline"></div>
+                    </div>
                 </div>
                 <div>
-                    <label for="icon5Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône 5</a></label>
-                    <input type="text" id="icon5Name" value="disc">
-                    <label for="icon5Link">Lien du bouton 5</label>
-                    <input type="text" id="icon5Link" value="https://my.epitech.eu/">
+                    <div class="input-container">
+                        <input type="text" id="icon5Name" required="">
+                        <label for="icon5Name" class="label">Nom du bouton 5</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="icon5Link" required="">
+                      <label for="icon5Link" class="label">Lien du bouton 5</label>
+                      <div class="underline"></div>
+                    </div>
+                    </div>
                 </div>
                 <div>
-                    <label for="icon6Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône 6</a></label>
-                    <input type="text" id="icon6Name" value="youtube">
-                    <label for="icon6Link">Lien du bouton 6</label>
-                    <input type="text" id="icon6Link" value="https://youtube.com/">
+                    <div class="input-container">
+                        <input type="text" id="icon6Name" required="">
+                        <label for="icon6Name" class="label">Nom du bouton 6</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="icon6Link" required="">
+                      <label for="icon6Link" class="label">Lien du bouton 6</label>
+                      <div class="underline"></div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </section>
         <section>
             <h2>Liens - Liste 1</h2>
             <div id="links1Settings">
-                <label for="iconlist1Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône de la liste 1</a></label>
-                <input type="text" id="iconlist1Name" value="music">
+                <div class="input-container">
+                    <input type="text" id="iconlist1Name" required="">
+                    <label for="iconlist1Name" class="label">Nom de l'icône de la liste 1</label>
+                    <div class="underline"></div>
+                  </div>
                 <div>
-                    <label for="iconlist1Link1">Nom du lien 1</label>
-                    <input type="text" id="iconlist1Link1" value="New Gen Bénin 🇧🇯 ">
-                    <label for="iconlist1LinkName1">Lien 1</label>
-                    <input type="text" id="iconlist1LinkName1" value="https://open.spotify.com/playlist/01IQz6djth4BPsAYKDn8e3?si=Hzxa3yP2T4K_MEowkZmzXA">
+                    <div class="input-container">
+                        <input type="text" id="iconlist1Link1" required="">
+                        <label for="iconlist1Link1" class="label">Nom du lien 1</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist1LinkName1" required="">
+                      <label for="iconlist1LinkName1" class="label">Lien 1</label>
+                      <div class="underline"></div>
+                    </div>
+                    </div>
                 </div>
                 <div>
-                    <label for="iconlist1Link2">Nom du lien 2</label>
-                    <input type="text" id="iconlist1Link2" value="Late Night Vibes">
-                    <label for="iconlist1LinkName2">Lien 2</label>
-                    <input type="text" id="iconlist1LinkName2" value="https://open.spotify.com/playlist/2DQ2KHEaZcT4IdcaXDSaag?si=84ad3b1b9f6a40c1">
+                    <div class="input-container">
+                        <input type="text" id="iconlist1Link2" required="">
+                        <label for="iconlist1Link2" class="label">Nom du lien 2</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist1LinkName2" required="">
+                      <label for="iconlist1LinkName2" class="label">Lien 2</label>
+                      <div class="underline"></div>
+                    </div>
+                    </div>
                 </div>
                 <div>
-                    <label for="iconlist1Link3">Nom du lien 3</label>
-                    <input type="text" id="iconlist1Link3" value="Sweet Afro_vibes">
-                    <label for="iconlist1LinkName3">Lien 3</label>
-                    <input type="text" id="iconlist1LinkName3" value="https://open.spotify.com/playlist/14mrd6kzGFXd1LL57oizMG?si=nyizLlzARJ-AXTqqQoscEQ">
+                    <div class="input-container">
+                        <input type="text" id="iconlist1Link3" required="">
+                        <label for="iconlist1Link3" class="label">Nom du lien 3</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist1LinkName3" required="">
+                      <label for="iconlist1LinkName3" class="label">Lien 3</label>
+                      <div class="underline"></div>
+                    </div>
                 </div>
                 <div>
-                    <label for="iconlist1Link4">Nom du lien 4</label>
-                    <input type="text" id="iconlist1Link4" value="Afropiano Vibes Only !">
-                    <label for="iconlist1LinkName4">Lien 4</label>
-                    <input type="text" id="iconlist1LinkName4" value="https://open.spotify.com/playlist/0aCBFNpLrqijpfgC12w0vb?si=279eaadb76594d76">
+                    <div class="input-container">
+                        <input type="text" id="iconlist1Link4" required="">
+                        <label for="iconlist1Link4" class="label">Nom du lien 4</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist1LinkName4" required="">
+                      <label for="iconlist1LinkName4" class="label">Lien 4</label>
+                      <div class="underline"></div>
+                    </div>
                 </div>
             </div>
         </section>
         <section>
             <h2>Liens - Liste 2</h2>
             <div id="links2Settings">
-                <label for="iconlist2Name">Nom de <a href="https://lucide.dev" target="_blank">l'icône de la liste 2</a></label>
-                <input type="text" id="iconlist2Name" value="coffee">
+                <div class="input-container">
+                    <input type="text" id="iconlist2Name" required="">
+                    <label for="iconlist2Name" class="label">Nom de l'icône de la liste 2</label>
+                    <div class="underline"></div>
+                  </div>
                 <div>
-                    <label for="iconlist2Link1">Nom du lien 1</label>
-                    <input type="text" id="iconlist2Link1" value="Google">
-                    <label for="iconlist2LinkName1">Lien 1</label>
-                    <input type="text" id="iconlist2LinkName1" value="https://www.google.com/">
+                    <div class="input-container">
+                        <input type="text" id="iconlist2Link1" required="">
+                        <label for="iconlist2Link1" class="label">Nom du lien 1</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist2LinkName1" required="">
+                      <label for="iconlist2LinkName1" class="label">Lien 1</label>
+                      <div class="underline"></div>
+                    </div>
                 </div>
                 <div>
-                    <label for="iconlist2Link2">Nom du lien 2</label>
-                    <input type="text" id="iconlist2Link2" value="Moodle">
-                    <label for="iconlist2LinkName2">Lien 2</label>
-                    <input type="text" id="iconlist2LinkName2" value="https://moodle.epitest.eu/login/index.php">
+                    <div class="input-container">
+                        <input type="text" id="iconlist2Link2" required="">
+                        <label for="iconlist2Link2" class="label">Nom du lien 2</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist2LinkName2" required="">
+                      <label for="iconlist2LinkName2" class="label">Lien 2</label>
+                      <div class="underline"></div>
+                    </div>
                 </div>
                 <div>
-                    <label for="iconlist2Link3">Nom du lien 3</label>
-                    <input type="text" id="iconlist2Link3" value="Google Traduction">
-                    <label for="iconlist2LinkName3">Lien 3</label>
-                    <input type="text" id="iconlist2LinkName3" value="https://translate.google.com">
+                    <div class="input-container">
+                        <input type="text" id="iconlist2Link3" required="">
+                        <label for="iconlist2Link3" class="label">Nom du lien 3</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist2LinkName3" required="">
+                      <label for="iconlist2LinkName3" class="label">Lien 3</label>
+                      <div class="underline"></div>
+                    </div>
+
                 </div>
                 <div>
-                    <label for="iconlist2Link4">Nom du lien 4</label>
-                    <input type="text" id="iconlist2Link4" value="Canva">
-                    <label for="iconlist2LinkName4">Lien 4</label>
-                    <input type="text" id="iconlist2LinkName4" value="https://www.canva.com/">
+                    <div class="input-container">
+                        <input type="text" id="iconlist2Link4" required="">
+                        <label for="iconlist2Link4" class="label">Nom du lien 4</label>
+                        <div class="underline"></div>
+                      </div>
+                    <div class="input-container">
+                      <input type="text" id="iconlist2LinkName4" required="">
+                      <label for="iconlist2LinkName4" class="label">Lien 4</label>
+                      <div class="underline"></div>
+                    </div>
                 </div>
             </div>
-        </section>
-        <section>
-            <div class="descr">Changer l'arrière plan</div>
-            <div class="input">
-              <label id="importlbl" for="backgroundImageUrl">
-                <i data-feather="upload"></i>
-              </label>
-              <input type="file" name="import" id="backgroundImageUrl" accept=".png, .jpg, .jpeg">
+                </div>
             </div>
         </section>
         <button id="saveSettings">Enregistrer</button>
@@ -138,43 +296,6 @@
     body {
   background-color: #1e1e1e;
   color: #fff;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-}
-
-header h1 {
-  font-size: 2em;
-  margin-bottom: 20px;
-}
-
-section {
-  margin-bottom: 40px;
-}
-
-h2 {
-  border-bottom: 1px solid #444;
-  padding-bottom: 10px;
-  margin-bottom: 20px;
-}
-
-label {
-  display: block;
-  margin: 10px 0 5px;
-}
-
-input[type="text"],
-select {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #444;
-  background-color: #333;
-  color: #fff;
-}
-
-input[type="checkbox"] {
-  margin-right: 10px;
 }
 
 footer {
@@ -185,4 +306,3 @@ footer {
 }
 </style>
 </html>
-
