--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <button id="themeButton">
     <i id="themeIcon" data-lucide="moon"></i>
   </button>
-  <a href="settings.html">
+  <!-- <a href="settings.html">
     <button id="settingsButton">
       <i id="settingsIcon" data-lucide="settings"></i>
     </button>
-  </a>
+  </a> -->
   <div class="container">
     <div class="timeBlock">
       <div class="clock">
